test: unit tests

--- a/src/app/shared/components/table/table-cells/status-cell/status-cell.component.html
+++ b/src/app/shared/components/table/table-cells/status-cell/status-cell.component.html
@@ -1,2 +1,2 @@
 <span *ngIf="item.selectable" class="available" aria-hidden="true"></span>
-{{item[field] | titlecase}}
+<span class="status">{{item[field] | titlecase}}</span>
